# SafePass

./: CMakeLists.txt  README.md
lib/sodium/share/libsodium/: vcpkg.spdx.json  vcpkg_abi_info.txt
lib/sodium/share/pkgconf/: vcpkg.spdx.json  vcpkg_abi_info.txt
lib/sodium/share/vcpkg-cmake/: vcpkg.spdx.json  vcpkg_abi_info.txt
lib/sodium/share/vcpkg-cmake-get-vars/: vcpkg.spdx.json  vcpkg_abi_info.txt
lib/sodium/share/vcpkg-msbuild/: vcpkg.spdx.json  vcpkg_abi_info.txt
lib/sodium/share/vcpkg-pkgconfig-get-modules/: vcpkg.spdx.json  vcpkg_abi_info.txt
lib/sodium/share/vcpkg-tool-meson/: vcpkg.spdx.json  vcpkg_abi_info.txt
src/cpp/: main.cpp
